[project]
name = "traffic-ai-openenv"
version = "0.1.0"
description = "AI Traffic Signal Control using OpenEnv"
authors = [{ name = "Sahil" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0",
    "openai"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
